--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.14",
     "svelte": "^3.44.0",
+    "svelte-geolocation": "^0.3.0",
     "tailwindcss": "^3.1.7",
     "vite": "^3.0.0"
   },
